@@ -2113,12 +2113,6 @@
     </tr>
 
     <tr>
-      <td><pre>-uipalette &lt;1|2&gt;</pre></td>
-      <td>Used the specified palette for UI elements.  This isn't yet
-        complete.</td>
-    </tr>
-
-    <tr>
       <td><pre>-listdelay &lt;delay&gt;</pre></td>
       <td>Set the amount of time to wait between treating successive
         keypresses as a single word in list widgets (value can range
